# eufs_sim

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CPPLINT.cfg  LICENSE  README.md
eufs_config/: CMakeLists.txt  package.xml
eufs_config/config/: configDry.yaml  launcherOptions.yaml  motionNoise.yaml  pluginParams.yaml
eufs_config/rviz/: dashboard.rviz  default.rviz
eufs_config/ui/: control.perspective
eufs_description/: CMakeLists.txt  package.xml
eufs_description/launch/: visualisator.launch
eufs_description/meshes/: MonkeyNoise.dae  cone_yellow.dae
eufs_description/robots/: ads-dv-torque.urdf.xacro  ads-dv.urdf.xacro  ads-dv_config.yaml  eufs.urdf  eufs.urdf.xacro  eufs_config.yaml  wheelchair.urdf.xacro
eufs_description/sensors/: VLP-16.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  imu_hector_plugin.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  pointgrey_bumblebee2.urdf.xacro  zed.urdf.xacro
eufs_description/urdf/: ads-dv_base.urdf.xacro  eufs_base.gazebo.xacro  eufs_base.urdf.xacro  eufs_plugins.gazebo.xacro  suspension_wheel.urdf.xacro  wheels.urdf.xacro
eufs_gazebo/: CMakeLists.txt  README.md  package.xml  requirements.txt
eufs_gazebo/config/: eufs_sim.perspective
eufs_gazebo/launch/: LAST_LAUNCH.launch  acceleration.launch  big_track.launch  blacklist.txt  copier_tester.launch  ekf_evaluator.launch  ekf_sim_launcher.launch  empty.launch  eufs_control.launch  extractor.launch  fastslam_evaluator.launch  fastslam_test.launch  load_car.launch  load_car.launch.py  monster.launch  perception_sensors_simulator.launch  rand.launch  rand_CT.launch  rand_converted.launch  randgen_test.launch  sbg_raw_data_simulator.launch  skidpad.launch  skidpadConversionTest.launch  skidpad_for_fastslam.launch  skidpad_for_fastslam_CT.launch  small_track.launch  sprint17.launch
eufs_gazebo/nodes/: cone_ground_truth.py  ekf_evaluator.py  extractor.py  fastslam_evaluator.py  ground_truth_republisher.py  perception_sensors_simulator.py  sbg_raw_data_simulator.py
eufs_gazebo/tracks/: FAST_SLAM_PRELOADED_MAP.csv  LAST_LAUNCH.csv  acceleration.csv  big_track.csv  copier_tester.csv  fastslam_test.csv  monster.csv  rand.csv  rand_CT.csv  rand_converted_converted.csv  randgen_test.csv  scale_tester.csv  scale_tester_CT.csv  skidpad.csv  skidpad_for_fastslam.csv  skidpad_for_fastslam_CT.csv  small_track.csv  track_gen.py
eufs_gazebo/worlds/: LAST_LAUNCH.world  acceleration.world  big_track.world  copier_tester.world  monster.world  noisy_small_track.world  rand.png.world  rand.world  rand_CT.world  rand_converted.world  randgen_testtrack.world  scale_tester.world  skidpad.world  skidpadConversionTest.world  skidpad_for_fastslam.world  skidpad_for_fastslam_CT.world  small_track.world  small_track_CT.world  small_track_CT_CT.world
eufs_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
eufs_gazebo_plugins/gazebo_cone_ground_truth/: CMakeLists.txt
eufs_gazebo_plugins/gazebo_race_car_model/: CMakeLists.txt
eufs_gazebo_plugins/src/: gazebo_cone_ground_truth.cpp  gazebo_state_ground_truth.cpp
eufs_launcher/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.cfg  setup.py
eufs_launcher/config/: default.rviz  eufs_launcher.yaml
eufs_launcher/eufs_launcher/: README.md
eufs_launcher/launch/: eufs_launcher.launch  eufs_launcher.launch.py  parent.launch  simulation.launch  simulation.launch.py  simulation2.launch.py
eufs_launcher/resource/: Launcher.ui  Sketcher.ui  eufs_launcher.yaml  launcher.ui  noiseFiles.txt  randgen_launch_template  randgen_world_template
eufs_launcher/scripts/: eufs_launcher
eufs_launcher/src/: simple_world_plugin.cpp
eufs_launcher/track_config/: skidpad.yaml
eufs_launcher/ui/: launcher.ui  launcher_resources.qrc  qutmslauncher.ui
eufs_models/: CMakeLists.txt  README.md  models.txt  package.xml
eufs_models/config/: noise.yaml
eufs_models/src/: dynamic_bicycle.cpp  point_mass.cpp  vehicle_model.cpp
eufs_msgs/: CMakeLists.txt  README.md  package.xml
eufs_msgs/msg/: FilterOutput.msg  chassisState.msg  driveCommand.msg  driveCommand2.msg  driveCommand4.msg  fullState.msg  lapStats.msg  systemState.msg
eufs_plugins/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
eufs_plugins/gazebo_cone_detection_plugin/: CMakeLists.txt
eufs_plugins/gazebo_cone_ground_truth/: CMakeLists.txt
eufs_plugins/gazebo_cone_plugin/: CMakeLists.txt
eufs_plugins/gazebo_cone_plugins/: CMakeLists.txt
eufs_plugins/gazebo_embedded_plugins/: CMakeLists.txt
eufs_plugins/gazebo_lidar_plugin/: CMakeLists.txt
eufs_plugins/gazebo_race_car_model/: CMakeLists.txt
eufs_plugins/gazebo_race_car_plugin/: CMakeLists.txt
eufs_plugins/gazebo_res_plugin/: CMakeLists.txt
eufs_plugins/gazebo_sbg_plugin/: CMakeLists.txt
eufs_plugins/gazebo_simulate_bounding_boxes/: CMakeLists.txt
eufs_plugins/gazebo_steering_motor_plugin/: CMakeLists.txt
eufs_plugins/include/: SocketCAN.cpp  SocketCAN.hpp  helpers_gazebo.hpp  helpers_ros.hpp
eufs_plugins/urdf/: eufs_plugins.gazebo.xacro
eufs_racecar/: CMakeLists.txt  README.md  package.xml  racecars.txt  setup.cfg  setup.py
eufs_racecar/launch/: load_car.launch.py
eufs_racecar/meshes/: QEV3_4.dae  ads-dv.dae  ads_dv_chassis.dae  lando.dae  wheel_left.dae  wheel_right.dae
eufs_racecar/urdf/: SBG_GPS.urdf.xacro  SBG_IMU.urdf.xacro  VLP-32C.urdf.xacro  ZED2i.urdf.xacro  chassis_base.urdf.xacro  robot.urdf.xacro  wheels.urdf.xacro
eufs_rqt/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
eufs_rqt/config/: eufs_sim.perspective
eufs_rqt/resource/: MissionControlGUI.ui  (+1 more)
robot_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ros_can_sim/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin.xml  requirements.txt  setup.cfg  setup.py
rqt_tutorial_cpp/: CMakeLists.txt  package.xml  plugin.xml
state_control/: CMakeLists.txt  package.xml  plugin.xml
testing_sim/: CMakeLists.txt  package.xml
vehicle_emulation/: CMakeLists.txt  package.xml  plugin.xml
(+465 files in other folders)
