<?xml version="1.0"?>
<package format="2">
    <name>eufs_description</name>
    <version>0.1.0</version>
    <description>The eufs_description package
    Contrains all of the 3D models and meshes for
    simulation purposes.
    </description>

    <maintainer email="ignat.m.georgiev@gmail.com">Ignat Georgiev</maintainer>
    <maintainer email="loizoustephanos@gmail.com">Stephanos Loizou</maintainer>
    <maintainer email="olliejday@gmail.com">Oliver Day</maintainer>

    <license>MIT</license>

    <url type="website">http://eufs.co</url>
    <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
    <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <depend>hector_gazebo_plugins</depend>
    <depend>joint_state_controller</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>

    <export>
        <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
    </export>
</package>
