<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eufs_description</name>
  <version>0.1.0</version>
  <description>The eufs_description package
    Contrains all of the 3D models and meshes for
    simulation purposes.
  </description>

  <maintainer email="siliconlad@protonmail.com">Angus Stewart</maintainer>
  <maintainer email="niklasburggraaff@gmail.com">Ignat Georgiev</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>joint_state_controller</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
  </export>
</package>
