<?xml version="1.0"?>
<package format="2">
    <name>eufs_gazebo</name>
    <version>0.0.0</version>
    <description>The eufs_gazebo package</description>

    <maintainer email="ignat.m.georgiev@gmail.com">Ignat Georgiev</maintainer>
    <maintainer email="loizoustephanos@gmail.com">Stephanos Loizou</maintainer>
    <maintainer email="olliejday@gmail.com">Oliver Day</maintainer>

    <license>MIT</license>

    <url type="website">http://eufs.co</url>
    <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
    <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslint</build_depend>

    <depend>gazebo_ros</depend>
    <depend>eufs_description</depend>
    <depend>ros_can_sim</depend>
    <depend>eufs_msgs</depend>
    <depend>joint_state_controller</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>
    <depend>python-scipy</depend>
    <depend>python-pandas</depend>
    <depend>python-numpy</depend>
    <depend>python-matplotlib</depend>
    <depend>python-skimage</depend>

    <export>
        <gazebo_ros gazebo_plugin_path="${prefix}/plugins" gazebo_model_path="${prefix}/.." />
    </export>

</package>
