<?xml version="1.0"?>
<package format="2">
  <name>eufs_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>
    Gazebo plugins for Formula Student simulations
  </description>

  <maintainer email="info@eufs.co">EUFS</maintainer>
  <license>MIT</license>
  <author>EUFS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <!--
    Need to use gazebo_dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <exec_depend>gazebo_dev</exec_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>

</package>