<?xml version="1.0"?>
<package format="2">
    <name>eufs_gazebo_plugins</name>
    <version>1.0.0</version>
    <description>Gazebo plugins for Formula Student simulations</description>

    <maintainer email="info@eufs.co">EUFS</maintainer>
    <license>MIT</license>
    <author>EUFS</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_msgs</depend>
    <depend>gazebo_plugins</depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>nodelet</depend>
    <depend>nav_msgs</depend>
    <depend>eufs_msgs</depend>
    <depend>ackermann_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>

    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>

</package>