<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eufs_plugins</name>
  <version>2.0.0</version>
  <description>Gazebo plugins for eufs_sim with QUTMS stack</description>

  <author email="cambobmat@icloud.com">Cameron Matthew</author>
  <author email="siliconlad@protonmail.com">Angus Stewart</author>
  <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <depend>eufs_models</depend>

  <depend>driverless_msgs</depend>

  <depend>sbg_driver</depend>

  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
