<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eufs_racecar</name>
  <version>2.0.0</version>
  <description>URDF, mesh and material files for autonomous vehicles.</description>

  <maintainer email="cambobmat@icloud.com">Cameron Matthew</maintainer>
  <maintainer email="siliconlad@protonmail.com">Angus Stewart</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

  <depend>ament_index_python</depend>
  <depend>xacro</depend>

  <depend>gazebo_plugins</depend>
  <depend>eufs_plugins</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
