<?xml version="1.0"?>
<package format="2">
  <name>robot_control</name>
  <version>1.0.0</version>
  <description>Package to control an ackermann racecar in simulation.
  Based on work of Robotnik.</description>

  <maintainer email="ignat.m.georgiev@gmail.com">Ignat Georgiev</maintainer>
  <maintainer email="loizoustephanos@gmail.com">Stephanos Loizou</maintainer>
  <maintainer email="olliejday@gmail.com">Oliver Day</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://github.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://github.com/eufs/eufs_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>eufs_msgs</depend>
  <depend>rqt_gui</depend>
  <depend>std_srvs</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
